# Computer-Graphics

./: .gitignore  COMP371.sln  README.md
Code::Blocks/1.1.hello_window/: hello_window.cbp
Code::Blocks/1.1.hello_window/src/: Main.cpp
Code::Blocks/1.2.hello_window_clear/: hello_window_clear.cbp
Code::Blocks/1.2.hello_window_clear/src/: Main.cpp
Code::Blocks/2.1.hello_triangle/: hello_triangle.cbp  vertex.shader
Code::Blocks/2.1.hello_triangle/src/: Main.cpp
Code::Blocks/3.1.shaders_uniform/: shaders_uniform.cbp
Code::Blocks/3.2.shaders_interpolation/: shaders_interpolation.cbp
Code::Blocks/3.3.shaders_class/: shaders_class.cbp
Code::Blocks/3.3.shaders_class/src/: Main.cpp
Code::Blocks/4.1.textures/: textures.cbp
Code::Blocks/5.1.transformations/: transformations.cbp
Code::Blocks/exercise_grid/: exercise_grid.cbp  fragment.shader  vertex.shader
Code::Blocks/lab_01/: lab_01.cbp
Code::Blocks/lab_01_1/: lab_01_1.cbp
Code::Blocks/lab_02/: lab_02.cbp
Code::Blocks/lab_03/: fShader.fs  lab_03.cbp
Code::Blocks/lab_04/: lab_04.cbp
Code::Blocks/labs/: Lab_01.cpp  labs.cbp  labs.depend
Code::Blocks/template/: ColorFragmentShader.fragmentshader  template.cbp
Code::Blocks/test/: test.cbp  test.depend  test.layout
Code::Blocks/tutorial_01/: tutorial_01.cbp
Code::Blocks/tutorial_02/: tutorial_02.cbp
Code::Blocks/tutorial_03/: SimpleFragmentShader.fragmentshader  tutorial_03.cbp
Code::Blocks/tutorial_03_1/: SimpleVertexShader.vertexshader  tutorial_03.cbp
Code::Blocks/tutorial_04/: tutorial_04.cbp
Lab1_0118/: Lab1_0118.sln
Lab1_0118/Debug/: Lab1_0118.ilk
Lab1_0118/Lab1_0118/: Driver.cpp  Lab1_0118.vcxproj  Lab1_0118.vcxproj.filters  glad.c
Labs/: COMP 371- Computer Graphics-Lab1  Labs.sln
Labs/Lab1/: Lab1.cpp  Lab1.vcxproj
Labs/Lab2/: Lab2.cpp  Lab2.vcxproj  fragment.shader  vertex.shader
LearnOpenGL/: Driver.cpp  LearnOpenGL.cbp  LearnOpenGL.layout  workflow
Robot_Horse/: Robot_Horse.cbp
Robot_Horse/include/: shader_gl.h
Robot_Horse/shaders/: axis.fs  axis.vs  fshader_a9.glsl  grid.fs  grid.vs  horse.fs  horse.vs  vshader_a9.glsl
Robot_Horse/src/: Horse.h  Main.cpp  Vertices.h
VS2013/lab_01/: Lab01.cpp
VS2013/lab_01_1/: fragment.shader  lab_01_1.vcxproj  lab_01_1.vcxproj.filters
VS2013/lab_02/: Lab02.cpp
VS2013/lab_03/: Lab03.cpp  ObjLoader.hpp  lab_03.vcxproj  vertex.shader
VS2013/tutorial_01/: stdafx.h  tutorial_01.vcxproj  tutorial_01.vcxproj.filters
VS2013/tutorial_02/: Tutorial02.cpp  tutorial_02.vcxproj.filters
VS2013/tutorial_02_1/: Tutorial02.cpp
VS2013/tutorial_03/: SimpleVertexShader.vertexshader  Tutorial03.cpp  tutorial_03.vcxproj  tutorial_03.vcxproj.filters
VS2013/tutorial_03_1/: tutorial_03_1.vcxproj
VS2013/tutorial_04/: Tutorial04.cpp
assignments/assignment1/: README.md  README.txt  assignment1.cbp  axis.fs  axis.vs  horse.fs  horse.vs
assignments/assignment2/: Robot_Horse.cbp
code::blocks/test/: Main.cpp  test.depend
glad/include/glad/: glad.h
glad/src/: glad.c
horse/horse_glm/: horse_glm.cbp  vshader_a9.glsl
horse_glfw/: horse_glfw.cbp  vshader_a9.glsl
horse_glfw/src/: Horse.h  Source.cpp
horse_glut/: horse_glut.cbp
lab_01/: Lab01.cpp  lab_01.vcxproj  stdafx.h
lab_01_1/: lab_01_1.vcxproj  lab_01_1.vcxproj.filters
lab_02/: Lab02.cpp  lab_02.vcxproj  lab_02.vcxproj.filters
lab_02/lab_02/: Source.cpp  lab_02.vcxproj  stdafx.h
lab_03/: ObjLoader.cpp  lab_03.vcxproj.filters
labs/lab_01_1/: lab_01_1.cbp
labs/lab_02/: vertex.shader
labs/lab_03/: lab_03.cbp
labs/lab_04/: fragment.shader  lab_04.cbp
labs/lab_05/: f.glsl  lab_05.cbp  v.glsl
labs/lab_06/: f.glsl  lab_06.cbp  v.glsl  vertex.shader
learnopengl/: CMakeLists.txt  ComputerGraphics.cbp
learnopengl/configuration/: root_directory.h
opengl-horse-modelling/: opengl-horse-modelling.cbp
opengl-horse-modelling/src/: MatrixStack.h  Source.cpp
opengl-horse-modelling_glfw/: opengl-horse-modelling.cbp  vshader_a9.glsl
opengl-horse-modelling_glfw/src/: Horse.h  Source.cpp
opengl-tutorial/bin-vc12/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Tutorials.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-misc05_picking_BulletPhysics-MinSizeRel.cmd  launch-misc05_picking_BulletPhysics-RelWithDebInfo.cmd  launch-misc05_picking_custom-Debug.cmd  launch-misc05_picking_custom-MinSizeRel.cmd  launch-misc05_picking_custom-RelWithDebInfo.cmd  launch-misc05_picking_slow_easy-Debug.cmd  launch-misc05_picking_slow_easy-MinSizeRel.cmd  launch-misc05_picking_slow_easy-Release.cmd  launch-playground-Debug.cmd  launch-playground-MinSizeRel.cmd  launch-tutorial01_first_window-Debug.cmd  launch-tutorial02_red_triangle-RelWithDebInfo.cmd  launch-tutorial03_matrices-Debug.cmd  launch-tutorial03_matrices-MinSizeRel.cmd  launch-tutorial03_matrices-RelWithDebInfo.cmd  launch-tutorial03_matrices-Release.cmd  launch-tutorial04_colored_cube-RelWithDebInfo.cmd  launch-tutorial05_textured_cube-Debug.cmd  launch-tutorial05_textured_cube-MinSizeRel.cmd  launch-tutorial06_keyboard_and_mouse-MinSizeRel.cmd  launch-tutorial06_keyboard_and_mouse-Release.cmd  launch-tutorial07_model_loading-Debug.cmd  launch-tutorial07_model_loading-MinSizeRel.cmd  launch-tutorial08_basic_shading-Debug.cmd  launch-tutorial09_AssImp-Debug.cmd  launch-tutorial09_AssImp-MinSizeRel.cmd  launch-tutorial09_several_objects-Debug.cmd  launch-tutorial09_vbo_indexing-MinSizeRel.cmd  launch-tutorial09_vbo_indexing-RelWithDebInfo.cmd  launch-tutorial09_vbo_indexing-Release.cmd  launch-tutorial10_transparency-MinSizeRel.cmd  (+73 more)
tutorial_01/: Tutorial01.cpp  stdafx.cpp
tutorial_011/: Source.cpp  tutorial_01.vcxproj
tutorial_02/: tutorial_02.vcxproj
tutorial_02_1/: Tutorial02.cpp  stdafx.cpp  stdafx.h  tutorial_02_1.vcxproj  tutorial_02_1.vcxproj.filters
tutorial_03_1/: Tutorial03.cpp
tutorial_04/: TransformVertexShader.vertexshader  tutorial_04.vcxproj  tutorial_04.vcxproj.filters
tutorials/: tutorial.sln
tutorials/tutorial_01/: Source.cpp  tutorial_01.vcxproj
(+261 files in other folders)
