cmake_minimum_required(VERSION 3.9)
project(learnopengl)

set(CMAKE_CXX_STANDARD 11)

add_executable(learnopengl
        configuration/root_directory.h
        includes/glad/glad.h
        includes/glm/detail/_features.hpp
        includes/glm/detail/_fixes.hpp
        includes/glm/detail/_noise.hpp
        includes/glm/detail/_swizzle.hpp
        includes/glm/detail/_swizzle_func.hpp
        includes/glm/detail/_vectorize.hpp
        includes/glm/detail/dummy.cpp
        includes/glm/detail/func_common.hpp
        includes/glm/detail/func_exponential.hpp
        includes/glm/detail/func_geometric.hpp
        includes/glm/detail/func_integer.hpp
        includes/glm/detail/func_matrix.hpp
        includes/glm/detail/func_packing.hpp
        includes/glm/detail/func_trigonometric.hpp
        includes/glm/detail/func_vector_relational.hpp
        includes/glm/detail/glm.cpp
        includes/glm/detail/intrinsic_common.hpp
        includes/glm/detail/intrinsic_exponential.hpp
        includes/glm/detail/intrinsic_geometric.hpp
        includes/glm/detail/intrinsic_integer.hpp
        includes/glm/detail/intrinsic_matrix.hpp
        includes/glm/detail/intrinsic_trigonometric.hpp
        includes/glm/detail/intrinsic_vector_relational.hpp
        includes/glm/detail/precision.hpp
        includes/glm/detail/setup.hpp
        includes/glm/detail/type_float.hpp
        includes/glm/detail/type_gentype.hpp
        includes/glm/detail/type_half.hpp
        includes/glm/detail/type_int.hpp
        includes/glm/detail/type_mat.hpp
        includes/glm/detail/type_mat2x2.hpp
        includes/glm/detail/type_mat2x3.hpp
        includes/glm/detail/type_mat2x4.hpp
        includes/glm/detail/type_mat3x2.hpp
        includes/glm/detail/type_mat3x3.hpp
        includes/glm/detail/type_mat3x4.hpp
        includes/glm/detail/type_mat4x2.hpp
        includes/glm/detail/type_mat4x3.hpp
        includes/glm/detail/type_mat4x4.hpp
        includes/glm/detail/type_vec.hpp
        includes/glm/detail/type_vec1.hpp
        includes/glm/detail/type_vec2.hpp
        includes/glm/detail/type_vec3.hpp
        includes/glm/detail/type_vec4.hpp
        includes/glm/gtc/bitfield.hpp
        includes/glm/gtc/color_space.hpp
        includes/glm/gtc/constants.hpp
        includes/glm/gtc/epsilon.hpp
        includes/glm/gtc/integer.hpp
        includes/glm/gtc/matrix_access.hpp
        includes/glm/gtc/matrix_integer.hpp
        includes/glm/gtc/matrix_inverse.hpp
        includes/glm/gtc/matrix_transform.hpp
        includes/glm/gtc/noise.hpp
        includes/glm/gtc/packing.hpp
        includes/glm/gtc/quaternion.hpp
        includes/glm/gtc/random.hpp
        includes/glm/gtc/reciprocal.hpp
        includes/glm/gtc/round.hpp
        includes/glm/gtc/type_precision.hpp
        includes/glm/gtc/type_ptr.hpp
        includes/glm/gtc/ulp.hpp
        includes/glm/gtc/vec1.hpp
        includes/glm/gtx/associated_min_max.hpp
        includes/glm/gtx/bit.hpp
        includes/glm/gtx/closest_point.hpp
        includes/glm/gtx/color_space.hpp
        includes/glm/gtx/color_space_YCoCg.hpp
        includes/glm/gtx/common.hpp
        includes/glm/gtx/compatibility.hpp
        includes/glm/gtx/component_wise.hpp
        includes/glm/gtx/dual_quaternion.hpp
        includes/glm/gtx/euler_angles.hpp
        includes/glm/gtx/extend.hpp
        includes/glm/gtx/extented_min_max.hpp
        includes/glm/gtx/fast_exponential.hpp
        includes/glm/gtx/fast_square_root.hpp
        includes/glm/gtx/fast_trigonometry.hpp
        includes/glm/gtx/gradient_paint.hpp
        includes/glm/gtx/handed_coordinate_space.hpp
        includes/glm/gtx/hash.hpp
        includes/glm/gtx/integer.hpp
        includes/glm/gtx/intersect.hpp
        includes/glm/gtx/io.hpp
        includes/glm/gtx/log_base.hpp
        includes/glm/gtx/matrix_cross_product.hpp
        includes/glm/gtx/matrix_decompose.hpp
        includes/glm/gtx/matrix_interpolation.hpp
        includes/glm/gtx/matrix_major_storage.hpp
        includes/glm/gtx/matrix_operation.hpp
        includes/glm/gtx/matrix_query.hpp
        includes/glm/gtx/matrix_transform_2d.hpp
        includes/glm/gtx/mixed_product.hpp
        includes/glm/gtx/norm.hpp
        includes/glm/gtx/normal.hpp
        includes/glm/gtx/normalize_dot.hpp
        includes/glm/gtx/number_precision.hpp
        includes/glm/gtx/optimum_pow.hpp
        includes/glm/gtx/orthonormalize.hpp
        includes/glm/gtx/perpendicular.hpp
        includes/glm/gtx/polar_coordinates.hpp
        includes/glm/gtx/projection.hpp
        includes/glm/gtx/quaternion.hpp
        includes/glm/gtx/range.hpp
        includes/glm/gtx/raw_data.hpp
        includes/glm/gtx/rotate_normalized_axis.hpp
        includes/glm/gtx/rotate_vector.hpp
        includes/glm/gtx/scalar_multiplication.hpp
        includes/glm/gtx/scalar_relational.hpp
        includes/glm/gtx/simd_mat4.hpp
        includes/glm/gtx/simd_quat.hpp
        includes/glm/gtx/simd_vec4.hpp
        includes/glm/gtx/spline.hpp
        includes/glm/gtx/std_based_type.hpp
        includes/glm/gtx/string_cast.hpp
        includes/glm/gtx/transform.hpp
        includes/glm/gtx/transform2.hpp
        includes/glm/gtx/type_aligned.hpp
        includes/glm/gtx/vector_angle.hpp
        includes/glm/gtx/vector_query.hpp
        includes/glm/gtx/wrap.hpp
        includes/glm/common.hpp
        includes/glm/exponential.hpp
        includes/glm/ext.hpp
        includes/glm/fwd.hpp
        includes/glm/geometric.hpp
        includes/glm/glm.hpp
        includes/glm/integer.hpp
        includes/glm/mat2x2.hpp
        includes/glm/mat2x3.hpp
        includes/glm/mat2x4.hpp
        includes/glm/mat3x2.hpp
        includes/glm/mat3x3.hpp
        includes/glm/mat3x4.hpp
        includes/glm/mat4x2.hpp
        includes/glm/mat4x3.hpp
        includes/glm/mat4x4.hpp
        includes/glm/matrix.hpp
        includes/glm/packing.hpp
        includes/glm/trigonometric.hpp
        includes/glm/vec2.hpp
        includes/glm/vec3.hpp
        includes/glm/vec4.hpp
        includes/glm/vector_relational.hpp
        includes/KHR/khrplatform.h
        includes/learnopengl/camera.h
        includes/learnopengl/filesystem.h
        includes/learnopengl/mesh.h
        includes/learnopengl/model.h
        includes/learnopengl/shader.h
        includes/learnopengl/shader_m.h
        includes/learnopengl/shader_s.h
        includes/stb_image.h
        src/1.getting_started/1.1.hello_window/hello_window.cpp
#[[        src/1.getting_started/1.2.hello_window_clear/hello_window_clear.cpp
        src/1.getting_started/2.1.hello_triangle/hello_triangle.cpp
        src/1.getting_started/2.2.hello_triangle_indexed/hello_triangle_indexed.cpp
        src/1.getting_started/2.3.hello_triangle_exercise1/hello_triangle_exercise1.cpp
        src/1.getting_started/2.4.hello_triangle_exercise2/hello_triangle_exercise2.cpp
        src/1.getting_started/2.5.hello_triangle_exercise3/hello_triangle_exercise3.cpp
        src/1.getting_started/3.1.shaders_uniform/shaders_uniform.cpp
        src/1.getting_started/3.2.shaders_interpolation/shaders_interpolation.cpp
        src/1.getting_started/3.3.shaders_class/shaders_class.cpp
        src/1.getting_started/4.1.textures/textures.cpp
        src/1.getting_started/4.2.textures_combined/textures_combined.cpp
        src/1.getting_started/4.3.textures_exercise2/textures_exercise2.cpp
        src/1.getting_started/4.4.textures_exercise3/textures_exercise3.cpp
        src/1.getting_started/4.5.textures_exercise4/textures_exercise4.cpp
        src/1.getting_started/5.1.transformations/transformations.cpp
        src/1.getting_started/5.2.transformations_exercise2/transformations_exercise2.cpp
        src/1.getting_started/6.1.coordinate_systems/coordinate_systems.cpp
        src/1.getting_started/6.2.coordinate_systems_depth/coordinate_systems_depth.cpp
        src/1.getting_started/6.3.coordinate_systems_multiple/coordinate_systems_multiple.cpp
        src/1.getting_started/7.1.camera_circle/camera_circle.cpp
        src/1.getting_started/7.2.camera_keyboard_dt/camera_keyboard_dt.cpp
        src/1.getting_started/7.3.camera_mouse_zoom/camera_mouse_zoom.cpp
        src/1.getting_started/7.4.camera_class/camera_class.cpp
        src/2.lighting/1.colors/colors.cpp
        src/2.lighting/2.1.basic_lighting_diffuse/basic_lighting_diffuse.cpp
        src/2.lighting/2.2.basic_lighting_specular/basic_lighting_specular.cpp
        src/2.lighting/3.1.materials/materials.cpp
        src/2.lighting/3.2.materials_exercise1/materials_exercise1.cpp
        src/2.lighting/4.1.lighting_maps_diffuse_map/lighting_maps_diffuse.cpp
        src/2.lighting/4.2.lighting_maps_specular_map/lighting_maps_specular.cpp
        src/2.lighting/4.3.lighting_maps_exercise4/lighting_maps_exercise4.cpp
        src/2.lighting/5.1.light_casters_directional/light_casters_directional.cpp
        src/2.lighting/5.2.light_casters_point/light_casters_point.cpp
        src/2.lighting/5.3.light_casters_spot/light_casters_spot.cpp
        src/2.lighting/5.4.light_casters_spot_soft/light_casters_spot_soft.cpp
        src/2.lighting/6.multiple_lights/multiple_lights.cpp
        src/3.model_loading/1.model_loading/model_loading.cpp
        src/4.advanced_opengl/1.1.depth_testing/depth_testing.cpp
        src/4.advanced_opengl/1.2.depth_testing_view/depth_testing_view.cpp
        src/4.advanced_opengl/10.1.instancing_quads/instancing_quads.cpp
        src/4.advanced_opengl/10.2.asteroids/asteroids.cpp
        src/4.advanced_opengl/10.3.asteroids_instanced/asteroids_instanced.cpp
        src/4.advanced_opengl/11.anti_aliasing_offscreen/anti_aliasing_offscreen.cpp
        src/4.advanced_opengl/2.stencil_testing/stencil_testing.cpp
        src/4.advanced_opengl/3.1.blending_discard/blending_discard.cpp
        src/4.advanced_opengl/3.2.blending_sort/blending_sorted.cpp
        src/4.advanced_opengl/5.1.framebuffers/framebuffers.cpp
        src/4.advanced_opengl/5.2.framebuffers_exercise1/framebuffers_exercise1.cpp
        src/4.advanced_opengl/6.1.cubemaps_skybox/cubemaps_skybox.cpp
        src/4.advanced_opengl/6.2.cubemaps_environment_mapping/cubemaps_environment_mapping.cpp
        src/4.advanced_opengl/8.advanced_glsl_ubo/advanced_glsl_ubo.cpp
        src/4.advanced_opengl/9.1.geometry_shader_houses/geometry_shader_houses.cpp
        src/4.advanced_opengl/9.2.geometry_shader_exploding/geometry_shader_exploding.cpp
        src/4.advanced_opengl/9.3.geometry_shader_normals/normal_visualization.cpp
        src/5.advanced_lighting/1.advanced_lighting/advanced_lighting.cpp
        src/5.advanced_lighting/2.gamma_correction/gamma_correction.cpp
        src/5.advanced_lighting/3.1.1.shadow_mapping_depth/shadow_mapping_depth.cpp
        src/5.advanced_lighting/3.1.2.shadow_mapping_base/shadow_mapping_base.cpp
        src/5.advanced_lighting/3.1.3.shadow_mapping/shadow_mapping.cpp
        src/5.advanced_lighting/3.2.1.point_shadows/point_shadows.cpp
        src/5.advanced_lighting/3.2.2.point_shadows_soft/point_shadows_soft.cpp
        src/5.advanced_lighting/3.3.csm/csm.cpp
        src/5.advanced_lighting/4.normal_mapping/normal_mapping.cpp
        src/5.advanced_lighting/5.1.parallax_mapping/parallax_mapping.cpp
        src/5.advanced_lighting/5.2.steep_parallax_mapping/steep_parallax_mapping.cpp
        src/5.advanced_lighting/5.3.parallax_occlusion_mapping/parallax_occlusion_mapping.cpp
        src/5.advanced_lighting/6.hdr/hdr.cpp
        src/5.advanced_lighting/7.bloom/bloom.cpp
        src/5.advanced_lighting/8.1.deferred_shading/deferred_shading.cpp
        src/5.advanced_lighting/8.2.deferred_shading_volumes/deferred_shading_volumes.cpp
        src/5.advanced_lighting/9.ssao/ssao.cpp
        src/6.pbr/1.1.lighting/lighting.cpp
        src/6.pbr/1.2.lighting_textured/lighting_textured.cpp
        src/6.pbr/2.1.1.ibl_irradiance_conversion/ibl_irradiance_conversion.cpp
        src/6.pbr/2.1.2.ibl_irradiance/ibl_irradiance.cpp
        src/6.pbr/2.2.1.ibl_specular/ibl_specular.cpp
        src/6.pbr/2.2.2.ibl_specular_textured/ibl_specular_textured.cpp
        src/7.in_practice/1.debugging/debugging.cpp
        src/exercise_grid/src/common/stdafx.cpp
        src/exercise_grid/src/common/stdafx.h
        src/exercise_grid/src/Main.cpp]]
        src/glad.c
        src/stb_image.cpp)
